--- a/app.yaml
+++ b/app.yaml
@@ -2,14 +2,25 @@ application: go-rpi
 version: 1
 runtime: go
 api_version: go1
-
 handlers:
-- url: /(.*).html
-  static_files: html/\1.html
-  upload: html/(.*\.html)
-
-- url: (/.*)
+- url: /(b.gif|online|online_get_token|online_send_msg)
   script: _go_app
 
+- url: /
+  static_files: hugozhu.github.com/index.html
+  upload: hugozhu.github.com/index.html
+
+- url: /(about|archive|categories|pages|posts|tags|tools)
+  static_files: hugozhu.github.com/\1/index.html
+  upload: hugozhu.github.com/.*/index\.html
+
+- url: /(.*)/
+  static_files: hugozhu.github.com/\1/index.html
+  upload: hugozhu.github.com/.*/index\.html
+   
+- url: /(.*)$
+  static_files: hugozhu.github.com/\1
+  upload: hugozhu.github.com/.*
+  
 # inbound_services:
 # - channel_presence
