--- a/app.yaml
+++ b/app.yaml
@@ -1,9 +1,13 @@
 application: go-rpi
 version: 1
 runtime: go
-api_version: go1
+api_version: go1  
+
+includes:
+- .secret.yaml
+
 handlers:
-- url: /(b.gif|online|online_get_token|online_send_msg)
+- url: /(b.gif|online|online_get_token|online_send_msg|github)
   script: _go_app
 
 - url: /
